Fix add styles to classes

--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -51,7 +51,7 @@
 
   &:active,
   &:hover {
-    .icon i {
+    .fas {
       background-color: $primary;
       color: #ffffff;
       border-color: $primary;
