--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -121,6 +121,9 @@ header {
     }
 
     .menu {
+      @media (min-width: 768px) and (max-width: 991px) {
+        margin: auto;   
+      }
       display: flex;
       align-self: stretch;
 
@@ -182,6 +185,9 @@ header {
     }
 
     .search-form {
+      @media (min-width: 768px) and (max-width: 991px) {
+        margin: auto;   
+      }
       border: 1px solid $form-border-color;
       display: inline-flex;
       height: 45px;
