--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -15,3 +15,8 @@ $form-border-color: #292929;
 $transitionDuration: 0.25s;
 $transitionDuration-bg: 0.25s;
 $transitionDuration-color: 0.25s;
+
+//gallery section
+$gallery-price: #79ae30;
+$gallery-tabs-active: #f4f5f7;
+$gallery-tabs-border: #e2e2e2;
