--- a/src/sass/components/_section--blog-posts.scss
+++ b/src/sass/components/_section--blog-posts.scss
@@ -1,20 +1,5 @@
 .section--blog-posts {
-  @media (max-width: 800px) {
-        .mobile-container {
-          display: block;
-          text-align: center;
-        }
-        .row {
-          display: block;
-          text-align: center;
-        }
-        a {
-        .post-box {
-          display: block;
-          text-align: center;
-        }
-      }
-    }   
+
   a {
     text-decoration: none;
    .post-box {
@@ -86,4 +71,23 @@
   }
 }
 }
+  @media (max-width: 800px) {
+        h3 {
+        text-align: center;
+        }
+        .mobile-container {
+          display: block;
+          text-align: center;
+        }
+        .row {
+          display: block;
+          text-align: center;
+        }
+        a {
+        .post-box {
+          display: block;
+          text-align: center;
+        }
+      }
+    } 
 }
