--- a/src/sass/components/_section--blog-posts.scss
+++ b/src/sass/components/_section--blog-posts.scss
@@ -80,7 +80,6 @@
           text-align: center;
         }
         .row {
-          display: block;
           text-align: center;
         }
         a {
@@ -88,6 +87,16 @@
           display: block;
           text-align: center;
         }
+      }
+    }
+    @media (max-width: 992px) {
+      .heading {
+        flex: 0 0 100%;
+        max-width: 100%;
+      }  
+
+    h3 {
+        text-align: center;
       }
     } 
 }
