--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -7,5 +7,6 @@ $footer-bg: #363636;
 $primary: #d58e32;
 
 $text-color: #2a2a2a;
-
+$post-info-heading-color: #676767;
+  
 $form-border-color: #292929;
