--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -35,7 +35,7 @@
     padding: 25px;
 
     h5 {
-      color: rgb(103,103,103);
+      color: $post-info-heading-color;
       font-size: 16px;
       line-height: 24px;
       letter-spacing: 1px;
@@ -44,7 +44,7 @@
     p {
       font-size: 14px;
       line-height: 24px;
-      color: rgb(103,103,103);
+      color: $post-info-heading-color;
       text-align: justify;
     }
 
