--- a/src/sass/components/_section--blog-posts.scss
+++ b/src/sass/components/_section--blog-posts.scss
@@ -51,7 +51,7 @@
     padding: 25px;
 
     h5 {
-      color: rgb(103,103,103);
+      color: $post-info-heading-color;
       font-size: 16px;
       line-height: 24px;
       letter-spacing: 1px;
@@ -60,7 +60,7 @@
     p {
       font-size: 14px;
       line-height: 24px;
-      color: rgb(103,103,103);
+      color: $post-info-heading-color;
       text-align: justify;
     }
 
