--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,6 +5,7 @@ $footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
 
 $primary: #d58e32;
+$secondary: #e0a38e;
 
 $text-color: #2a2a2a;
 $post-info-heading-color: #676767;
