--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -5,6 +5,8 @@
   line-height: 24px;
   font-weight: 600;
   padding: 10px 30px;
+  transition: color $hover-element-transition ease-out;
+  transition: background-color $hover-bg-transition ease-out;
 
   &:not(.no-hover):hover {
     @extend %hover-bg;
@@ -29,6 +31,8 @@
   color: #2a2a2a;
   font-size: 13px;
   line-height: 22px;
+  transition: color $hover-element-transition ease-out;
+  transition: background-color $hover-bg-transition ease-out;
 
   &:hover {
     @extend %hover-element;
