--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -14,6 +14,7 @@ header {
         a {
           color: #ffffff;
           font-size: 13px;
+          transition: color $hover-element-transition ease-out;
 
           &:hover {
             @extend %hover-element;
@@ -82,6 +83,7 @@ header {
           align-items: center;
           justify-content: center;
           font-size: 20px;
+          transition: background-color $hover-bg-transition ease-out;
 
           i {
             margin-right: 5px;
@@ -147,6 +149,8 @@ header {
             border-top: 4px solid #ffffff;
             font-weight: 500;
             letter-spacing: 1px;
+            transition: color $hover-element-transition ease-out;
+            transition: background-color $hover-bg-transition ease-out;
 
             &:hover,
             &.active {
