--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -44,6 +44,9 @@
           text-decoration: none;
           font-size: 18px;
           display: block;
+          &::before {
+            transition: all $hover-element-transition ease-out;
+          }
 
           &.active,
           &:hover {
