--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,6 +16,7 @@
 @import "components/footer";
 
 @import "components/button";
+@import "components/tooltip";
 @import "components/feature-box";
 @import "components/panel-bar";
 @import "components/post-box";
