--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,6 +17,7 @@
 
 @import "components/button";
 @import "components/tooltip";
+@import "components/carousel";
 @import "components/feature-box";
 @import "components/panel-bar";
 @import "components/post-box";
