--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -1,6 +1,17 @@
 .section--gallery {
     padding: 0 0 20px 0;
 
+    .panel-bar {
+
+        &-heading {
+            
+            &-h3 {
+                margin-bottom: 10px !important; 
+                line-height: 22px !important;
+            }
+        }
+    }
+
     .gallery-tabs {
         
         &-tabItem {
@@ -41,20 +52,58 @@
     //content for tabs
     .gallery-tabContent {
         width: 100%;
-        // height: 100%;   // why?
         background-color: $gallery-tabs-active;
-        border: 1px solid red;
 
         //content for tab
         &-tabPane {
             
             &-carousel {
 
+                .gallery-item-bg1 {
+                    background-image: url('../images/gallery/1.jpg');
+                }
+
+                .gallery-item-bg2 {
+                    background-image: url('../images/gallery/2.jpeg');
+                }
+
+                .gallery-item-bg3 {
+                    background-image: url('../images/gallery/3.jpeg');
+                }
+
+                .gallery-item-bg4 {
+                    background-image: url('../images/gallery/4.jpeg');
+                }
+
+                .gallery-item-bg5 {
+                    background-image: url('../images/gallery/5.jpg');
+                }
+
+                .gallery-item-bg6 {
+                    background-image: url('../images/gallery/6.jpeg');
+                }
+
+                .gallery-item-bg7 {
+                    background-image: url('../images/gallery/7.jpg');
+                }
+
+                .gallery-item-bg8 {
+                    background-image: url('../images/gallery/8.jpeg');
+                }
+
+                .gallery-item-bg9 {
+                    background-image: url('../images/gallery/9.jpeg');
+                }
+
+                .gallery-item-bg10 {
+                    background-image: url('../images/gallery/10.jpeg');
+                }
+
+                .gallery-item-bg11 {
+                    background-image: url('../images/gallery/11.jpeg');
+                }
+
                 &-inner {
-                    
-                    .gallery-item-bg1 {
-                        background-image: url('../images/gallery/1.jpg');
-                    }
 
                     &-item {
                         height: 410px;
@@ -73,69 +122,168 @@
                                 
                                 &-btnContainer {
                                     padding: 5px 0;
+
+                                    &-btn {
+                                        &:hover {
+                                            border: 1px solid $primary;
+                                            background-color: transparent;
+                                            color: $primary;
+                                        }
+                                    }
                                               
                                 }
                             }    
                             
+                            &-dataContainer {
+                                position: absolute;
+                                bottom: 0;
+                                right: 0;
+                                display: flex;
+                                flex-direction: column;  
+
+
+                                &-name {
+                                    position: relative;
+                                    max-width: 400px;
+                                    padding: 6px 15px;
+                                    margin-bottom: 28px;
+                                    box-shadow: 0 3px 6px rgba(1,2,2,0.24);
+                                    background-color: $white;
+                                    
+                                    &::before {
+                                        content: ' ';
+                                        position: absolute;
+                                        border-left: 20px solid transparent;
+                                        border-right: 20px solid transparent;
+                                        transform: rotate(-45deg); 
+                                        left: -14px;
+                                        top: -4px;
+                                        border-bottom: 20px solid #2a2a2a;
+                                    }
+
+                                    &::after {
+                                        content: ' ';
+                                        position: absolute;
+                                        border-left: 20px solid transparent;
+                                        border-right: 20px solid transparent;
+                                        transform: rotate(-45deg); 
+                                        right: -14px;
+                                        bottom: -4px;
+                                        border-top: 20px solid #2a2a2a;
+                                    }
+
+                                    .content {
+                                        text-align: center;
+                                        padding: 20px;
+                                    
+                                        &-h5 {
+                                          color: $primary;
+                                          font-size: 16px;
+                                          line-height: 24px;
+                                          letter-spacing: 1px;
+                                        }
+                                    
+                                        &-stars {
+                                          &-a {
+                                            text-decoration: none;
+                                            color: rgb(42,42,42);
+                                            @extend .far;
+                                            @extend .fa-star;
+                                    
+                                            &.full {
+                                              @extend .fas;
+                                            }
+                                          }
+                                        }
+                                    }
+                                }
+
+                                &-priceContainer {
+                                    width: 105px;
+                                    height: 105px;
+                                    position: absolute;
+                                    top: -90px;
+                                    left: 50%;
+                                    display: flex;
+                                    flex-direction: column;
+                                    justify-content: center;
+                                    align-items: center;
+                                    background-color: rgba(42,42,42,0.6);
+                                    border-radius: 50%;
+                                    transform: translateX(-50%);
+                                    color: white;
+                                    
+                                    &-price {
+                                        margin: 0;
+                                        font-size: 20px;
+                                        font-weight: 500;
+                                    }
+
+                                    &-oldPrice {
+                                        margin: 0 0 -15px 0;
+                                        font-size: 16px;
+                                        text-decoration: line-through;     
+                                    }
+                                }
+                            }
                         }
                     }
                 }
 
-                %control {
-                    position: relative;
-                    margin: 7px;
-                    width: 33px;
-                    height: 68px;
-                    // top: 410px;
-                    z-index: 500;
-                    background-color: $text-color;
-                }
-
-                &-control--prev {
-                    @extend %control;
-
-                    // border: 1px solid green;
-                }
-
-                &-control--next {
-                    @extend %control;
-                    // border: 1px solid green;
-                }
-
-                &-indicatorsContainer {
+                &-controlContainer{
                     display: flex;
-                    overflow: hidden;
-                    // position: absolute;
-                    flex: 0 0 auto;
-                    // left: 47px;
-                    // top: 417px;
-                    width: 443px;
-                    flex-wrap: nowrap;
-                        
-                    border: 1px solid green;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
 
-                    &-indicators {
-                        bottom: 0;
+                    &-control {
                         position: relative;
-                        flex-wrap: nowrap;
-                        flex: 0 0 auto;
-                        justify-content: flex-start;
-                        // width: 443px;
-                        margin: 0;
-                        padding: 0;
+                        margin: 7px;
+                        width: 33px;
                         height: 68px;
+                        background-color: $text-color;
+                        opacity: 1;
                         
-                        // border: 1px solid green;
-    
-                        &-item {
-                            margin: 0 7px 0 0;
-                            width: 68px;
+                        &:hover {
+                           .gallery-tabContent-tabPane-carousel-controlContainer-control-icon {
+                                background-color: $primary;
+                           } 
+                        }
+                    }
+
+                    &-indicatorsContainer {
+                        display: flex;
+                        overflow: hidden;
+                        flex: 0 0 auto;
+                        width: 443px;
+                        flex-wrap: nowrap;
+                            
+                        &-indicators {
+                            bottom: 0;
+                            position: relative;
+                            flex-wrap: nowrap;
+                            flex: 0 0 auto;
+                            justify-content: flex-start;
+                            margin: 0;
+                            padding: 0;
                             height: 68px;
-                            background-color: $gallery-tabs-border;
+                            
+                            
+                            &-item {
+                                margin: 0 7px 0 0;
+                                width: 68px;
+                                height: 68px;
+                                background-color: $gallery-tabs-border;
+                                background-size: cover;
+                                background-position: center;
+                                opacity: .5;
+                                &.active {
+                                    opacity: 1;
+                                }
+                            }
                         }
                     }
                 }
-                
             }
         }
     }
