Change color on content-h5 in carousel - section  gallery

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,13 +22,14 @@
 @import "components/panel-bar";
 @import "components/post-box";
 @import "components/product-box";
-@import "components/gallery";
+
 
 @import "components/section--features";
 @import "components/section--feedback";
 @import "components/section--products";
 @import "components/section--deals";
 @import "components/section--brands";
+@import "components/section--gallery";
 
 body {
   font-family: 'Poppins', sans-serif;
