Add responsiveness to stars in product-box: add stars.js, add new classes (.star, .highlightedStars, .markedStar) to index.html), add class .star to product-box.scss

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -62,6 +62,10 @@
         &.full {
           @extend .fas;
         }
+        &.markedStar {
+          @extend .fas;
+          color: $primary;
+        }
       }
     }
   }
