--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -29,10 +29,12 @@
 
   .menu {
     text-align: center;
+    padding-right: 87px;
     ul {
       margin: 0;
       padding: 0;
       list-style: none;
+      justify-content: center;
       li {
         display: inline-block;
         margin: 0 0.5rem;
@@ -66,6 +68,8 @@
   }
 
   .dots {
+    padding: 0;
+
     ul {
       margin: 0;
       padding: 0 0 0 1rem;
