Add nesting in .scss file and fix spaces

--- a/src/sass/components/_section--features.scss
+++ b/src/sass/components/_section--features.scss
@@ -147,9 +147,11 @@
       .fur3 {
         background: url('../images/features/decorations.jpeg');
       }
-      .carousel-inner {
+      .carousel {
+        &-inner {
         height: 100%;
-        .carousel-item {
+        }
+        &-item {
           height: 100%;
           margin-top: 0;
           background-size: cover;
@@ -158,34 +160,34 @@
       }
       .contentBox {
         padding-top: 145px;
-      .content {
-        color: white;
-        text-transform: uppercase;
-        padding: 55px 0 45px 0;
-        background: rgba(42, 42, 42, 0.8);
-        position: relative;
-        h1, h2 {
-          font-weight: 400;
-        }
-        h1 span {
-            font-weight: 600;
-        }
-        .btn-main {
-          position: absolute;
-          bottom: -20px;
-          left: 40%;
-          border-radius: 3px;
-          border: 1px solid white;
-          background: white;
-          line-height: 30px;
-          color: $footer-claim-bg;
-          transition: .2s;
-          &:hover {
-            background: $footer-claim-bg;
+        .content {
+          color: white;
+          text-transform: uppercase;
+          padding: 55px 0 45px 0;
+          background: rgba(42, 42, 42, 0.8);
+          position: relative;
+          h1, h2 {
+            font-weight: 400;
+          }
+          h1 span {
+              font-weight: 600;
+          }
+          .btn-main {
+            position: absolute;
+            bottom: -20px;
+            left: 40%;
+            border-radius: 3px;
+            border: 1px solid white;
+            background: white;
+            line-height: 30px;
+            color: $footer-claim-bg;
+            transition: .2s;
+            &:hover {
+              background: $footer-claim-bg;
+            }
           }
         }
       }
-    }
       .buttons {
         position: relative;
         background: $footer-claim-bg;
@@ -200,7 +202,6 @@
         }
       }
     }
-    
   }
 }
 
