Change sections margins

--- a/src/sass/components/_section--features.scss
+++ b/src/sass/components/_section--features.scss
@@ -1,9 +1,9 @@
 .section--features {
-  padding: 5rem 0;
+  padding: 0 0 1.875rem 0;
 
   .features {
     height: 530px;
-    padding: 15px 0;
+    padding: 0 30px;
     .hot-deals {
       .top-bar {
         background: $footer-claim-bg;
