Add styles for slider (in Blog section)

--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -92,9 +92,13 @@
           &:hover {
             @extend %hover-bg;
             background-color: $primary;
-          }
+            }
         }
       }
+    }
+
+    .blog-slider-dots .tns-nav-active .blog-slider-dots__link {
+      background-color: $primary;
     }
   }
 }
