--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -80,3 +80,11 @@
 .section--blog-posts .post-box-link:hover {
   text-decoration: none;
 }
+
+.blog-slider {
+  margin: 0;
+}
+
+.blog-slider-dots__link:hover {
+  cursor: pointer;
+}
