--- a/src/sass/components/_section--features.scss
+++ b/src/sass/components/_section--features.scss
@@ -211,4 +211,13 @@
     padding: 1rem 0 3rem 0;
   }
 }
+@media(max-width:1200px) {
+  .section--features .features .hot-deals .photo .hover {
+    opacity: 1;
+    .btn-main {
+      position: relative;
+      top: 150px;
+    }
+  }
+}
 
