--- a/src/sass/components/_promo-box.scss
+++ b/src/sass/components/_promo-box.scss
@@ -9,22 +9,34 @@
       width: 100%;
       height: 100%;
     }
-
-    .rebate {
-      
-        position: absolute;
-        top: -30px;
-        left: 50%;
-        transform: translateX(-50%);
-        background-color: #292929;
-        border-radius: 50%;
-        color: #ffffff;
-        padding: 30px 15px 5px 15px;
-    }
 }
 
 .promo-box {
   height: 430px;
+
+  .rebate {
+    width: 90%;
+    height: 88%;
+    position: relative;
+    left: 28px;
+    top: -403px;
+    background-color: #292929;
+    opacity: 0.5;
+    color: #ffffff;
+  }
+  .rebate-info {
+    width: 50%;
+    position: relative;
+    left: 56px;
+    top: -630px;
+    color: white;
+    opacity: 0.9;
+    border: 1px solid red;
+
+    p { 
+      font-size: 38px;
+    }
+  }
 }
 
 .promo-box-small {
