--- a/src/sass/components/_promo-box.scss
+++ b/src/sass/components/_promo-box.scss
@@ -4,8 +4,9 @@
   background-color: #ffffff;
   border: 1px solid #e1e1e1;
   margin-bottom: 2rem;
+  text-transform: uppercase;
 
-    img {
+    .promo-box-img, .promo-box-small-img {
       width: 100%;
       height: 100%;
     }
@@ -13,53 +14,69 @@
 
 .promo-box {
   height: 430px;
+  position: relative;
 
   .rebate {
     width: 90%;
-    height: 88%;
-    position: relative;
-    left: 28px;
-    top: -403px;
+    height: 90%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin: 20px 22px;
     background-color: #292929;
     opacity: 0.4;
     color: #ffffff;
   }
   .rebate-info {
-    width: 50%;
-    position: relative;
-    left: 50px;
-    top: -630px;
+    width: 80%;
+    position: absolute;
+    left: 20px;
+    top: 22px;
+    margin-left: 15px;
+    margin-top: 145px;
     color: white;
     opacity: 0.95;
     
-    p { 
+    .rebate-info-title { 
       font-size: 38px;
       font-weight: bold;
       margin-bottom: 0;
       padding: 0;
-      &.product-name {
+    }
+    .product-name {
         font-size: 58px;
         margin-top: -25px;
-      }
-      &.product-rebate {
+    }
+    .product-rebate {
         width: 145px;
+        margin-top: -20px; 
         padding: 0 10px;;
         font-size: 48px;
         font-weight: 500;
         border: 5px solid white;
-      }
     }
   }
 }
 
+
 .promo-box-small {
   height: 199px;
-  
+  background-size: 100% 100%;
+
+  &.top {
+    background-image: url("../images/new/bed/10.jpg");
+  }
+
+  &.down {
+    background-image: url("../images/new/bed/07.jpg");
+  }
+
   .collection {
-    width: 40%;
-    position: relative;
-    left: 160px;
-    top: -160px;
+    width: 60%;
+    float: center;
+    margin: auto;
+    margin-left: 33%;
+    margin-top: 5%;
       
     p {
       font-weight: 400;
@@ -68,6 +85,10 @@
       &.collection-title {
         font-size: 30px;
         letter-spacing: 1px;
+      
+        .promo-bold {
+          font-weight: bold;
+        }
       }
       &.collection-subtitle {
         margin-top: -5px;
@@ -86,24 +107,22 @@
   
   .special-collection {
     width: 50%;
-    position: relative;
-    left: 270px;
-    top: -120px;
-
-    p {
-      font-weight: 400;
-
-      &.special-collection-title {
+    float: right;
+    margin: auto;
+    margin-left: 33%;
+    margin-top: 15%;
+    
+    .special-collection-title {
        font-size: 22px;
+       font-weight: 400;
        letter-spacing: 1.5px;
        color: $primary;
       }
-      &.special-collection-subtitle {
+    .special-collection-subtitle {
         font-size: 16px;
         font-weight: 500;
         margin-top: -10px;
         padding-left: 13px;
       }
-    }
   }
 }
