--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -45,7 +45,7 @@
     text-align: center;
     padding: 20px;
 
-    h5 {
+    h5, .product-title {
       color: $primary;
       font-size: 16px;
       line-height: 24px;
