Add colours for Gallery section

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -17,4 +17,7 @@ $hover-bg-transition: .25s;
 
 $hover-border-transition: .25s;
 
+// Gallery section
+$border-color: #e1e1e1;
+$menu-bg-color-active: #f4f5f7;
 $gallery-right-text-color-alternate: #79ae30;
