Changes path to image `right-side.jpg`

--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -246,7 +246,7 @@
 }
 
 .gallery-right-side {
-    background: url("/src/images/gallery/right-side.jpg") no-repeat center 0/cover;
+    background: url("../images/gallery/right-side.jpg") no-repeat center 0/cover;
     width: 100%;
     height: 100%;
     padding: 70px 0 0 60px;
