--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,6 +18,7 @@
 @import "components/post-box";
 @import "components/product-box";
 @import "components/gallery";
+@import "components/promo-box";
 
 @import "components/section--features";
 @import "components/section--gallery";
