--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -1,6 +1,6 @@
 .post-box {
   margin-bottom: 2rem;
-  
+
   .cover {
     padding: 70% 25px 0 25px;
     background: {
@@ -42,7 +42,7 @@
     p {
       font-size: 14px;
       line-height: 24px;
-      color: rgb(103,103,103);
+      color: rgb(103, 103, 103);
       text-align: justify;
     }
 
