--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -18,7 +18,7 @@ footer {
           a {
             font-size: 14px;
             line-height: 30px;
-            color: rgb(169,169,169);
+            color: rgb(169, 169, 169);
 
             &:hover {
               color: #ffffff;
@@ -49,7 +49,7 @@ footer {
     .copyright {
       p {
         margin: 0;
-        color: rgb(169,169,169);
+        color: rgb(169, 169, 169);
         font-size: 14px;
         line-height: 26px;
       }
@@ -66,7 +66,7 @@ footer {
           margin-left: 1rem;
 
           a {
-            color: rgb(169,169,169);
+            color: rgb(169, 169, 169);
             text-decoration: none;
 
             &:hover {
