--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -27,7 +27,7 @@ header {
       margin-right: 1.5rem;
 
       i {
-        margin-left: 5px
+        margin-left: 5px;
       }
     }
 
@@ -35,7 +35,7 @@ header {
       margin-left: 1.5rem;
 
       i {
-        margin-right: 5px
+        margin-right: 5px;
       }
     }
   }
@@ -52,7 +52,7 @@ header {
         margin: 0;
         font-size: 17px;
         line-height: 42px;
-        color: rgb(216,216,216);
+        color: rgb(216, 216, 216);
         font-weight: 500;
 
         i {
@@ -66,7 +66,6 @@ header {
     }
 
     .cart {
-
       .cart-box {
         display: inline-block;
         position: relative;
@@ -96,7 +95,7 @@ header {
           align-items: center;
           justify-content: center;
           font-size: 14px;
-          color: rgb(224,227,237);
+          color: rgb(224, 227, 237);
           position: absolute;
           top: 50%;
           right: 0;
@@ -113,7 +112,7 @@ header {
   }
 
   .menu-bar {
-    box-shadow: 2px 3.464px 6px rgba(1,2,2,0.2);
+    box-shadow: 2px 3.464px 6px rgba(1, 2, 2, 0.2);
     background-color: #ffffff;
 
     .container > .row {
