--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
 
 @import "bootstrap/bootstrap.scss";
 @import "fontawesome/fontawesome";
@@ -20,5 +20,5 @@
 @import "components/section--features";
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
