--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -2,6 +2,8 @@
   border: 1px solid #b6b6b6;
   text-align: center;
   margin-top: 40px;
+  display: block;
+  text-decoration: none;
 
   .icon {
     transform: translateY(-50%);
@@ -49,7 +51,10 @@
     }
   }
 
-  &.active {
+  &.active,
+  &:hover {
+    text-decoration: none;
+    cursor: pointer;
     i {
       background-color: $primary;
       color: #ffffff;
