Add active state on my favourite and to-compare buttons

--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -43,7 +43,9 @@
           <div class="line"></div>
           <div class="actions">
             <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+              <a href="#" class="btn-outline btn-outline-active"
+                ><i class="far fa-heart"></i
+              ></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
             <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
@@ -72,7 +74,9 @@
           <div class="actions">
             <div class="outlines">
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+              <a href="#" class="btn-outline btn-outline-active"
+                ><i class="fas fa-exchange-alt"></i
+              ></a>
             </div>
             <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
           </div>
@@ -99,8 +103,12 @@
           <div class="line"></div>
           <div class="actions">
             <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+              <a href="#" class="btn-outline btn-outline-active"
+                ><i class="far fa-heart"></i
+              ></a>
+              <a href="#" class="btn-outline btn-outline-active"
+                ><i class="fas fa-exchange-alt"></i
+              ></a>
             </div>
             <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
           </div>
@@ -127,7 +135,9 @@
           <div class="line"></div>
           <div class="actions">
             <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+              <a href="#" class="btn-outline btn-outline-active"
+                ><i class="far fa-heart"></i
+              ></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
             <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
