Fix and update style of select, upgrade the general outlook, add hovers

--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -58,6 +58,10 @@
               <i class="fas fa-list-ul"></i>
               <select name="" id="">
                 <option value="">Select a category</option>
+                <option value="">Furniture</option>
+                <option value="">Chair</option>
+                <option value="">Table</option>
+                <option value="">Sofa</option>
               </select>
               <i class="fas fa-caret-down"></i>
             </div>
