--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -7,5 +7,6 @@ $footer-bg: #363636;
 $primary: #d58e32;
 
 $text-color: #2a2a2a;
+$text-color-paler: rgba(42, 42, 42, 0.4);
 
 $form-border-color: #292929;
