--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -162,9 +162,17 @@ header {
 
     .search-form {
       border: 1px solid $form-border-color;
+      border-radius: 5px;
       display: inline-flex;
       height: 45px;
       color: $text-color;
+      &:hover {
+        cursor: pointer;
+        border: 1.5px solid $form-border-color;
+        .category {
+          border-right: 1.5px solid $form-border-color;
+        }
+      }
 
       .category {
         border-right: 1px solid $form-border-color;
@@ -175,7 +183,7 @@ header {
         i:first-child {
           color: $primary;
           position: absolute;
-          left: 10px;
+          left: 15px;
           z-index: 0;
         }
 
@@ -190,10 +198,14 @@ header {
           border: 0;
           background-color: transparent;
           outline: none;
-          padding: 5px 30px 5px 35px;
+          padding: 5px 30px 5px 45px;
           font-size: 14px;
           position: relative;
           z-index: 1;
+          font-weight: 500;
+          &:hover {
+            cursor: pointer;
+          }
         }
       }
 
@@ -204,12 +216,13 @@ header {
 
         input {
           border: 0;
-          padding-left: 10px;
+          padding-left: 15px;
+          padding-right: 45px;
           font-size: 14px;
           outline: none;
 
           &::placeholder {
-            color: $text-color;
+            color: $text-color-paler;
           }
         }
 
@@ -217,6 +230,9 @@ header {
           border: 0;
           background-color: transparent;
           outline: none;
+          &:hover {
+            cursor: pointer;
+          }
         }
       }
     }
